# foglamp-service-notification

./: .gitignore  .notification_queue.cpp.swp  .notification_service.cpp.swp  CMakeLists.txt  Description  Package  README.md  README.rst  VERSION  build_rhel.sh  delivery_plugin.cpp  make_deb  make_rpm  notification.cpp  notification_api.cpp  notification_manager.cpp  notification_queue.cpp  notification_service.cpp  notification_subscription.cpp  overmax_rule.cpp  requirements.sh  rule_plugin.cpp  test_file  test_file1
C/services/common/: delivery_plugin.cpp  delivery_queue.cpp  notification_api.cpp  notification_manager.cpp  notification_queue.cpp  notification_service.cpp  notification_subscription.cpp  overmax_rule.cpp  rule_plugin.cpp  threshold_rule.cpp  undermin_rule.cpp
C/services/common/include/: builtin_rule.h  delivery_plugin.h  delivery_queue.h  notification_api.h  notification_manager.h  notification_queue.h  notification_service.h  notification_stats.h  notification_subscription.h  overmax_rule.h  rule_plugin.h  threshold_rule.h  undermin_rule.h
C/services/notification/: CMakeLists.txt  notification.cpp  overmax_rule.cpp
include/: delivery_plugin.h  notification_api.h  notification_manager.h  notification_queue.h  notification_service.h  notification_stats.h  notification_subscription.h  overmax_rule.h  rule_plugin.h
tests/unit/C/: README.rst
tests/unit/C/scripts/: RunAllTests.sh
tests/unit/C/services/notification/: CMakeLists.txt  api_url.cpp  check_notification_state.cpp  get_instances.cpp  get_plugins.cpp  main.cpp  queue.cpp  remove_instance.cpp
